# openai-agents-fastapi-starter

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  vercel.json
static/: index.html
